# Forex-Factory-Calendar

./: .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt  scraper.py
output/: calendar.csv
scripts/: install_deps.sh  run_webapp.sh  set_cronjob.sh  unset_cronjob.sh
services/: forexwebapp.service
utils/: utils.py  web_connector.py
