[tool.poetry]
name = "forex"
version = "0.1.0"
description = ""
authors = ["Eldar Gazizov <kursus1010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
pandas = "^2.2.3"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
