[tool.poetry]
name = "forex"
version = "0.1.0"
description = ""
authors = ["Eldar Gazizov <kursus1010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
pandas = "^2.2.3"
schedule = "^1.2.2"
streamlit = "^1.39.0"
watchdog = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
